fix: working GET and POST endpoints
